--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"phpoffice/phpword": "^1.2",
 		"rmunate/spell-number": "^4.2",
 		"ryakad/pandoc-php": "^1.0",
-		"vlucas/phpdotenv": "^5.6"
+		"vlucas/phpdotenv": "^5.6",
+		"yajra/laravel-oci8": "^10.6"
 	},
 	"require-dev": {
 		"fakerphp/faker": "^1.9.1",
